Bug 121844 - Text is imported with wrong rotation for diagram objects in a PPTX
Summary: Text is imported with wrong rotation for diagram objects in a PPTX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.3.0
Keywords: filter:pptx
Depends on:
Blocks: OOXML-Chart PPTX
  Show dependency treegraph
 
Reported: 2018-12-01 14:49 UTC by Mike Kaganski
Modified: 2018-12-01 16:16 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A test for diargam's autoTxRot. (57.56 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2018-12-01 14:49 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2018-12-01 14:49:57 UTC
Created attachment 147195 [details]
A test for diargam's autoTxRot.

The attached PPTX has a single diagram object per each of 3 slides, and on each page, the autoTxRot param [1] of <dgm:alg type="tx"> in ppt/diagrams/layoutN.xml is different. It is absent on the 1st slide (defaults to "upr" as per [2]); "none" on the 2nd slide; and "grav" on the 3rd slide.

Current master toward 6.3 does not properly orient the texts in the shapes, despite [3] claims to had implemented that in GSoC 2018.

[1] ECMA-376-1:2016 21.4.7.5 ST_AutoTextRotation (Auto Text Rotation)
[2] https://msdn.microsoft.com/en-us/library/ff530664
[3] https://medium.com/@ekanshjha/gsoc18-smartart-week-4-4ccdc1b91a2f
Comment 1 Mike Kaganski 2018-12-01 14:53:49 UTC
https://gerrit.libreoffice.org/64396
Comment 2 Commit Notification 2018-12-01 15:53:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/af843af4c816ef25246c815e187729ec25b2f000%5E%21

tdf#121844: properly implement autoTxRot support

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.